--- a/chips-webapp/public/index.html
+++ b/chips-webapp/public/index.html
@@ -41,7 +41,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>
+    <!-- <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('worker.js').then(function(registration) {
@@ -55,6 +55,6 @@
       } else {
         console.log('Service Worker is not supported by browser.');
       }
-    </script>
+    </script> -->
   </body>
 </html>
